# advent2024

./: .gitignore  Cargo.toml  README.md
rust/: Cargo.toml
rust/src/: advent01.rs  advent02.rs  advent03.rs  advent04.rs  advent05.rs  advent06.rs  advent07.rs  advent08.rs
