[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "advent01"
path = "src/advent01.rs"

[[bin]]
name = "advent02"
path = "src/advent02.rs"

[[bin]]
name = "advent03"
path = "src/advent03.rs"

[[bin]]
name = "advent04"
path = "src/advent04.rs"

[[bin]]
name = "advent05"
path = "src/advent05.rs"

[[bin]]
name = "advent06"
path = "src/advent06.rs"

[[bin]]
name = "advent07"
path = "src/advent07.rs"

[[bin]]
name = "advent08"
path = "src/advent08.rs"

[dependencies]
regex = "1.11.1"
rayon = "1.10"
